
Xi:	Adding QueryDevicePointer request/reply
	Adding WarpDevicePointer request/reply

Files: 
	hw/xfree86/common/xf86Xinput.c
	hw/xfree86/common/xf86Cursor.c
	hw/xfree86/common/xf86Xinput.h
	Xi/extinit.c
	Xi/querydp.c
	Xi/querydp.h
	Xi/Makefile.am
	Xi/warpdevp.c
	Xi/warpdevp.h
	dix/cursor.c
	dix/events.c
	dix/dix.h

Note: This commit requires libXi additions to use the new functions.

== 18.12.06 ==
mi:     removing MPX ifdefs
	global sprite renaming in mipointer and misprite
	fixed: multiple remove cursor call in miSpriteInstallColormap
	fixed: wrong core pointer usage in miSpriteStoreColors

dix:    bugfix in CheckCursorConfinement
	removing MPX ifdefs
	removing MPX event generation (using Xi solely now)
	bugfix GrabDevice: uninitialized field in grab struct caused segfault

xfree86: removing MPX fdefs

Xi:     removing MPX protocol events

Files:
	include/inputstr.h
	mi/midispcur.c
	mi/mieq.c
	mi/mipointer.c
	mi/misprite.c
	dix/events.c
	dix/cursor.c
	dix/devices.c
	hw/xfree86/common/xf86Events.c
	hw/xfree86/common/xf86Input.h
	Xi/exevents.c

____________________________________________________________

Cleaning up #ifdef MPX from remaining files, removing it from configure.ac.
Removing building mpx extension from Makefile.am

Files:
	Makefile.am
	configure.ac
	hw/xfree86/ramdac/xf86HWCurs.c
	include/dix-config.h.in
	include/dix.h
	include/globals.h
	include/xorg-server.h.in
	mi/mieq.c
	mi/miinitext.c
	mi/mipointer.c
	os/utils.c

== 12.12.06 ==
dix:    Moving SpriteRec into DeviceIntRec
	removing global sprite structure
	beginning to remove MPX ifdefs

xnest:  Fix to make xnest compile again 

Files:
	dix/getevents.c
	dix/events.c
	dix/devices.c
	hw/xfree86/common/xf86Xinput.c
	include/cursor.h
	include/dix.h
	include/dixevents.h
	include/input.h
	include/inputstr.h
	XTrap/xtrapdi.c
	Xext/xtest.c
	hw/xnest/Events.c
	record/record.c

== 05.12.06 ==
Xi:     adding MPX checks to ProcessOtherEvents

mpx:    adding QueryPointer request and reply